bonus/confs/portainer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: protainer
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: selfsigned
spec:
  tls:
    - hosts:
        - portainer.iounejja.com
      secretName: portainer-tls
  rules:
    - host: portainer.iounejja.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
